src/test/deca/context/valid/created/if-then-else-2.deca
//Description :
// Test d'un if then else
//
// Resultats :
// C'est oui


{
    if (false) {
        print("C'est non");
    } else {
        print("C'est oui");
    }
}
