src/test/deca/context/invalid/created/if-then-else-int-condition.deca
//Description :
// Test d'un if then else avc une condition int
//
// Resultats :
// Erreur

{
    if (1) {
        print("Oui");
    } else {
        print("Non");
    }
}
